# buzzer

./: Cargo.toml  Dockerfile  README.md  build.rs  config.sample.yaml
.github/workflows/: rust.yml
api-types/: Cargo.toml
api-types/src/: lib.rs  websocket.rs
frontend/: Cargo.toml  README.md  index.html  index.js
frontend/src/: lib.rs  routes.rs
frontend/src/components/: index.rs  mod.rs  room.rs  user_edit.rs
src/: lib.rs  main.rs  rooms.rs  settings.rs
src/server/: auth.rs  error.rs  mod.rs  routes.rs
