[package]
name = "buzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.5.4"
color-eyre = "0.6.1"
config = "0.13.1"
tokio = "1.18.0"
tracing = "0.1.34"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"

[profile.release]
lto = true
debug = true
