[package]
name = "buzzer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-types = { path = "api-types" }
axum = { version = "0.5.4", features = ["ws", "headers"] }
axum-macros = "0.2.0"
color-eyre = "0.6.1"
config = "0.13.1"
jsonwebtoken = "8.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
time = "0.3.9"
tokio = { version = "1.18.0", features = ["full"] }
tower-http = { version = "0.3.2", features = ["trace", "fs"] }
tracing = "0.1.34"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }

[profile.release]
lto = true
debug = true

[workspace]
members = ["api-types", "frontend"]
