[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
api-types = { path = "../api-types" }
color-eyre = "0.6.1"
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3.21"
log = "0.4.16"
reqwasm = "0.5.0"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["sync"] }
uuid = { version = "1.0.0", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "0.2.80" }
wasm-bindgen-futures = "0.4.30"
wasm-cookies = "0.1.0"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = [
	"Event", "EventTarget", "InputEvent", "Document", "Window", "Location"
] }
yew = "0.19.3"
yew-router = "0.16.0"
